@@ -9,6 +9,7 @@ class MultiElementsPage
   select_lists(:the_select_lists, :class => 'selectlist')
   links(:the_links, :class => 'link')
   checkboxes(:the_checkboxes, :class => 'checkbox')
+  radio_buttons(:the_radio_buttons, :class => 'radio')
 end
 
 Given(/^I am on the multi elements page$/) do
@@ -442,4 +443,8 @@ end
 
 When(/^I select the check boxes using the generated method$/) do
   @elements = @page.the_checkboxes_elements
+end
+
+When(/^I select the radio buttons using the generated method$/) do
+  @elements = @page.the_radio_buttons_elements
 end
