@@ -14,6 +14,7 @@
     * select_lists
     * links
     * checkboxes
+    * radio_buttons
 === 2017-01-09
 * Enhancement
   * Added params class instance variable to hold hash values that can be used in the page
